# youtube-dl-tiny-grpc

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: main.yaml  pypi.yaml  test.yaml  trivy.yaml
protos/: youtube_dl_tiny_grpc.proto
src/: test_youtube_dl_tiny_grpc.py  youtube_dl_tiny_grpc.py
test/: test_youtube_dl_tiny_grpc.py
youtube_dl_tiny_grpc/: __init__.py  __main__.py  cache.py  metrics.py  options.py  util.py  youtube_dl_service.py  youtube_dl_tiny_grpc.py
youtube_dl_tiny_grpc/protobuf/: __init__.py  youtube_dl_tiny_grpc_pb2.py  youtube_dl_tiny_grpc_pb2_grpc.py
