[metadata]
name = youtube-dl-tiny-grpc
version = 0.1.0
author = Christian Segundo
author_email = chn2guevara@gmail.com
description = A tiny slice of youtube-dl exposed over gRPC
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/someone-stole-my-name/youtube-dl-tiny-grpc
project_urls =
    Bug Tracker = https://github.com/someone-stole-my-name/youtube-dl-tiny-grpc/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options.entry_points]
console_scripts =
  youtube-dl-tiny-grpc = youtube_dl_tiny_grpc:main

[options]
python_requires = >=3.8
install_requires =
    asyncio>=3.4.3
    grpcio-tools>=1.44.0
    setproctitle>=1.2.2
    youtube-dl>=2021.12.17
    hiredis>=2.0.0
    aioredis>=2.0.1
packages = find:

[options.packages.find]
exclude =
    test

#[options.extras_require]
#dev =
    #flake8
    #grpcio-tools

[flake8]
ignore = E501,E241
